--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,9 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.8'
     implementation "io.springfox:springfox-boot-starter:3.0.0"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'mysql:mysql-connector-java:8.0.27'
+//    implementation 'mysql:mysql-connector-java:8.0.27'
 
-
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
